--- a/backend/package.json
+++ b/backend/package.json
@@ -9,12 +9,13 @@
     "build": "strapi build",
     "strapi": "strapi"
   },
-  "devDependencies": {},
   "dependencies": {
-    "@strapi/strapi": "4.20.3",
-    "@strapi/plugin-users-permissions": "4.20.3",
-    "@strapi/plugin-i18n": "4.20.3",
     "@strapi/plugin-cloud": "4.20.3",
+    "@strapi/plugin-i18n": "4.20.3",
+    "@strapi/plugin-users-permissions": "4.20.3",
+    "@strapi/provider-upload-aws-s3": "^4.20.3",
+    "@strapi/provider-upload-cloudinary": "^4.20.3",
+    "@strapi/strapi": "4.20.3",
     "better-sqlite3": "8.6.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
