--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "@strapi/provider-upload-aws-s3": "^4.20.3",
     "@strapi/provider-upload-cloudinary": "^4.20.3",
     "@strapi/strapi": "4.20.3",
+    "axios": "^1.6.7",
     "better-sqlite3": "8.6.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
